	  add the ability to run the chip off the internal oscillator.  There is no open
	  board configuration for this part yet (the STM32VLDiscovery would be a candidate).
	  Contributed by Mike Smith.
	* arch/arm/src/stm32: Fixed typos in conditional compilation in the CAN and DMA
	  and some pin configuration.  This would have caused problems for STM32 F107xx.
	  Typos noted by Mike Smith.
	* arch/arm/src/lpc43xx/lpc43_serial.c:  Add support for certain RS-485 features
	* lib/termios/lib_cfsetispeed.c, lib_cfsetospeed.c, lib_tcflush.c:  Add
	  simple implementations of cfsetispeed(), cfsetospeed(), and tcflush().
	* include/sys/str_tty.h, lib/lib_setspeed.c, lib_getspeed.c, and lib_resetspeed.c:
	  Add APIs to support setting non-standard BAUD values not supported by POSIX
	  termios.  These are non-standard interfaces but have a precedence:  There are
	  similar interfaces in AIX.
	* include/sys/str_tty.h, lib/lib_setspeed.c, lib_getspeed.c, and lib_resetspeed.c:
	  Sigh... removed.  We don't need any more almost standard interfaces!  (SVN
	  revision 4968 if you want the short-lived code).
	* include/termios.h and lib/termios/*:  Open the existing, standard termios
	  interfaces to permit some non-standard baud settings.  The new termios definitions
	  still supports the POSIX standard except that it does not strictly enforce
	  baud rate settings, permitting some non-portable, but useful baud rate settings
	  (this is what the short-lived AIX-like interfaces would have accomplished as well).
	* include/termios.h and lib/termios/*:  Redesigned yet again (this is getting
	  painful.  NuttX now supports the BOTHER baud setting just as Linux does.  termios
	  Bxxx definitions are again encoded; cf[set|get][o|i]speed now deal with only the
	  encoded values.  If the encoed baud is set to BOTHER, then the values in the (non-
	  standard) c_ispeed and c_ospeed baud values may be accessed directly.


